syntax = "proto3";

package data;

import "google/protobuf/struct.proto";
import "data/geo/enum.proto";

// // // //

message GeoTransformObj {
  double scale = 1;
  double cx    = 2;
  double cy    = 3;
  bool invert_y = 4;
  uint32 precision_pow10 = 5;
}

message GeoBBoxObj {
  double min_x = 1;
  double min_y = 2;
  double max_x = 3;
  double max_y = 4;
}

message GeoPartObj {
  uint32 index = 1;
  string uid = 2;
  google.protobuf.Struct props = 3;
  string name = 4;
  GeoBBoxObj bbox = 5;
}

enum EditorCoordSpaceType {
  EDITOR_COORD_SPACE_UNSPECIFIED = 0;
  EDITOR_COORD_SPACE_WORLD = 1;
  EDITOR_COORD_SPACE_EXPORT = 2;
}

message EditorPoint2DObj {
  double x = 1;
  double y = 2;
}
message EditorPolylineObj {
  repeated EditorPoint2DObj points = 1;
  bool closed = 2;
}
message EditorBezierObj {
  repeated EditorPoint2DObj control_points = 1;

  bool closed = 2;
  uint32 segments = 3;
}

message EditorArcObj {
  EditorPoint2DObj center = 1;
  double radius = 2;
  double start_angle_rad = 3;
  double end_angle_rad = 4;
  bool ccw = 5;
}

enum EditorLinkType {
  EDITOR_LINK_TYPE_UNSPECIFIED = 0;
  EDITOR_LINK_TYPE_PARENT_CHILD = 1;
  EDITOR_LINK_TYPE_GROUP_MEMBER = 2;
  EDITOR_LINK_TYPE_ATTACH = 3;
  EDITOR_LINK_TYPE_OVER_UNDER = 4;
  EDITOR_LINK_TYPE_ALONG = 5;
}

message EditorLinkObj {
  string a_uid = 1;
  string b_uid = 2;
  EditorLinkType type = 3;
  google.protobuf.Struct props = 4;
}

message EditorLayerStateObj {
  string layer_id = 1;
  bool visible = 2;
  bool locked = 3;
  int32 z_index = 4;
}

message EditorGroupObj {
  string group_uid = 1;
  string name = 2;
  repeated string member_uids = 3;
  google.protobuf.Struct props = 4;
}

message EditorRoadModelObj {
  string target_uid = 1;
  EditorPolylineObj centerline = 2;
  double width = 3;
  bool closed = 4;
  google.protobuf.Struct props = 5;
}

message EditorShapeModelObj {
  string target_uid = 1;

  oneof model {
    EditorPolylineObj polyline = 2;
    EditorBezierObj bezier = 3;
    EditorArcObj arc = 4;
  }

  google.protobuf.Struct props = 10;
}


message EditorSnapNodeObj {
  string node_uid = 1;
  EditorPoint2DObj pos = 2;
  repeated string incident_uids = 3;
  google.protobuf.Struct props = 4;
}

enum EditorConstraintType {
  EDITOR_CONSTRAINT_TYPE_UNSPECIFIED = 0;
  EDITOR_CONSTRAINT_TYPE_SNAP = 1;
  EDITOR_CONSTRAINT_TYPE_FIXED_LENGTH = 2;
  EDITOR_CONSTRAINT_TYPE_PARALLEL = 3;
  EDITOR_CONSTRAINT_TYPE_PERPENDICULAR = 4;
}

message EditorConstraintObj {
  string constraint_uid = 1;
  EditorConstraintType type = 2;
  repeated string target_uids = 3;
  google.protobuf.Struct params = 4;
}

message EditorPayloadObj {
  uint32 payload_rev = 1;
  EditorCoordSpaceType coord_space = 2;
  repeated EditorLayerStateObj layers = 10;
  repeated EditorGroupObj groups = 11;
  repeated EditorLinkObj links = 12;
  repeated EditorRoadModelObj road_models = 20;
  repeated EditorShapeModelObj shape_models = 21;
  repeated EditorSnapNodeObj snap_nodes = 30;
  repeated EditorConstraintObj constraints = 31;
  google.protobuf.Struct props = 40;
}


message GeoObj {
  GeoType type = 1;
  GeoObj geometry = 2;
  google.protobuf.ListValue coordinates = 3;
  reserved 4 to 8;
  string embed_uid = 9;

  repeated GeoObj features = 10;
  repeated GeoObj geometries = 11;
  reserved 12 to 16;
  repeated GeoPartObj embed_parts = 17;
  GeoTransformObj embed_export_transform = 18;
  GeoBBoxObj embed_bbox = 19;

  optional GeoGeneratorType generator = 20;
  optional GeoFeatureType id = 21;
  optional string version = 22;
  optional string name = 23;
  optional double width = 24;
  reserved 25 to 38;
  google.protobuf.Struct embed_props = 39;

  optional double road_width = 40;
  optional double river_width = 41;
  optional double tower_radius = 42;
  optional double wall_thickness = 43;
  reserved 44 to 79;
  EditorPayloadObj embed_editor_payload = 80;
}
