syntax = "proto3";

package data;

import "data/palette/global.proto";

// // // //


enum PaletteVillageReliefType {
  PALETTE_VILLAGE_RELIEF_UNSPECIFIED = 0;
  hachures = 1;
  contours = 2;
  grass = 3;
}

enum PaletteVillageOutlineType {
  PALETTE_VILLAGE_OUTLINE_UNSPECIFIED = 0;
  hard = 1;
  soft = 2;
  none = 3;
}

enum PaletteVillageRoofType {
  PALETTE_VILLAGE_ROOF_UNSPECIFIED = 0;
  gable = 1;
  hip = 2;
  flat = 3;
  ruin = 4;
}

enum PaletteVillageTreeShapeType {
  PALETTE_VILLAGE_TREE_SHAPE_UNSPECIFIED = 0;
  cotton = 1;
  conifer = 2;
  palm = 3;
}


// //

message PaletteVillageTerrainObj {
  repeated PaletteRgbObj ground = 1;
  PaletteVillageReliefType relief = 2;
  PaletteRgbObj sand = 3;
  PaletteRgbObj plank = 4;
}

message PaletteVillageHousesObj {
  repeated PaletteRgbObj roof_light = 1;
  PaletteRgbObj roof_stroke = 2;
  float roof_variance = 3;
  float roof_slope = 4;
  PaletteVillageRoofType roof_type = 5;
}

message PaletteVillageRoadsObj {
  PaletteRgbObj road = 1;
  float large_road = 2;
  float small_road = 3;
  PaletteVillageOutlineType outline_roads = 4;
  bool merge_roads = 5;
}

message PaletteVillageFieldsObj {
  repeated PaletteRgbObj field_light = 1;
  PaletteRgbObj field_furrow = 2;
  float field_variance = 3;
  PaletteVillageOutlineType outline_fields = 4;
}

message PaletteVillageWaterObj {
  PaletteRgbObj water_shallow = 1;
  PaletteRgbObj water_deep = 2;
  PaletteRgbObj water_tide = 3;
  uint32 shallow_bands = 4;
}

message PaletteVillageTreesObj {
  repeated PaletteRgbObj tree = 1;
  PaletteRgbObj thicket = 2;
  PaletteRgbObj tree_details = 3;
  float treeVariance = 4;
  PaletteVillageTreeShapeType tree_shape = 5;
}

message PaletteVillageLightingObj {
  PaletteRgbObj shadow_color = 1;
  float shadow_length = 2;
  uint32 shadow_angle_deg = 3;
  PaletteRgbObj lights = 4;
}

message PaletteVillageTextObj {
  PaletteFontObj fontHeader = 1;
  PaletteFontObj fontPopulation = 2;
  PaletteFontObj fontNumber = 3;
}

message PaletteVillageMiscObj {
  PaletteRgbObj ink = 1;
  PaletteRgbObj paper = 2;
  float stroke_normal = 3;
  float stroke_thin = 4;
}

//

message PaletteVillageObj {
  PaletteVillageTerrainObj terrain = 1;
  PaletteVillageHousesObj houses = 2;
  PaletteVillageRoadsObj roads = 3;
  PaletteVillageFieldsObj fields = 4;
  PaletteVillageWaterObj water = 5;
  PaletteVillageTreesObj trees = 6;
  PaletteVillageLightingObj lighting = 7;
  PaletteVillageTextObj text = 8;
  PaletteVillageMiscObj misc = 9;
}